@@ -1,3 +1,9 @@
+2004-03-08  Paolo Carlini  <pcarlini@suse.de>
+
+	* docs/html/ext/howto.html: Add entry for DR 103 [WP].
+	* include/bits/stl_multiset.h: Add comment about DR 103.
+	* include/bits/stl_set.h: Likewise.
+
 2004-03-04  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/14320
